--- a/templates/Page2.html
+++ b/templates/Page2.html
@@ -97,7 +97,7 @@
                 </div>
             
                 <div class="row">
-                    INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
+                    SAMAM Copyright © 2024 Samam - All rights reserved || Designed By: SAMAM Team 
                 </div>
             </div>
         </footer>
