--- a/static/mainPage.css
+++ b/static/mainPage.css
@@ -127,7 +127,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-	height: 50vh; /* Set the height to 100% of the viewport height */
+	height: 50vh; 
     margin: 0; 
 }
 form{
