--- a/templates/Page2.html
+++ b/templates/Page2.html
@@ -73,7 +73,7 @@
         </header>
 
         <div class="container">
-            <a href="/character_form"><button type="button">Know Your Character</button></a>
+            <a href="/character_form"><button type="button">Analyze your personality</button></a>
             <a href="/disorder_form"><button type="button">Know Your Disorder</button></a>
         </div><br><br><br>
         <footer>
