--- a/templates/Page2.html
+++ b/templates/Page2.html
@@ -74,7 +74,7 @@
 
         <div class="container">
             <a href="/character_form"><button type="button">Analyze your personality</button></a>
-            <a href="/disorder_form"><button type="button">Know Your Disorder</button></a>
+            <a href="/disorder_form"><button type="button">Analyze the potential mental health risk</button></a>
         </div><br><br><br>
         <footer>
             <div class="footer">
