--- a/templates/resultPage.html
+++ b/templates/resultPage.html
@@ -42,8 +42,7 @@
         </header>
         
         <div class="label2">
-            Hello {% if gender == "male" %}sir{% else %}mam{% endif %}, {{ Name }}, 
-            {{ result }} 
+            Dear, {{ Name }}, {{ result }} 
         </div>
 
     
